style.css
*, *::after, *::before { 
    box-sizing: border-box;
}

html {
	background-color: rgb(35, 35, 36);
	font-family: 'IBM Plex Mono', monospace;
}

#header {
    display: block;
    background-color: black;
	border-radius: 15px;
    color: rgb(232, 228, 228);
    padding: 10px;
	margin: 0;
	text-align: center;
}

.button_wrapper {
	text-align: center;
}

#generate_jobs_btn, #show_data_btn {
	margin-bottom: 10px;
	margin-left: 10px; 
	font-size: 20px;
}

#show_data_btn {
	visibility: hidden;
}

.modal {
	position: fixed;
	left: 50%;
	right: 50%;
	transform: translate(-50%) scale(0);
	transition: 200ms ease-in-out;

	border-radius: 15px;
	z-index: 10;
	background: none;
	width: 700px;	
	height: 700px; 
	max-width: 80%;

	overflow-y: none;
    scrollbar-width: none; /* Firefox */
	overflow-x: hidden;
}

.modal.active {
	transform: translate(-50%) scale(1);
}
 
.modal-header {
	padding: 10px 15px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: sticky;
	top: 0;
} 

.modal-header .close {
	position: absolute;
	top: 0;
	right: 14px;
	cursor: pointer;
	font-size: 40px;
	font-weight: bold;
	border: none;
	outline: none;
	background: none;
}

.modal-body {
	padding: 10px 15px;
}

#overlay {
	position: fixed;
	opacity: 0;
	transition: 200ms ease-in-out;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgba(0, 0, 0, 0.5);
	pointer-events: none;
}

#overlay.active {
	opacity: 1;
	pointer-events: all;
}

#jobs_table {
	font-size: 30px;
	table-layout: fixed;
	border-collapse: separate;
	border: 3px solid rgb(232, 228, 228);
	border-radius: 15px;
	padding: 15px;
	background-color: black;
	margin: 0 auto;
	color: rgb(232, 228, 228);
	font-family:'Times New Roman', Times, serif;
}

td {
    /* border: solid 2px rgb(42, 26, 4); */
	text-align: center;
	padding: 3px 10px;
}

tbody {
    background-color: rgb(232, 228, 228);
    height: 350px;
    overflow-y: auto;
    scrollbar-width: none; /* Firefox */
	overflow-x: hidden;
	border-radius: 15px;
	color: black;
}

thead > tr, tbody {
    display: block;
}

.modal::-webkit-scrollbar { /* WebKit */
    width: 0;
    height: 0;
}

.num_of_processors {
	visibility: hidden;
	margin: 10px;
	text-align: center;
}

#data {
	font-size: 20px;
	margin: 10px;
	visibility: hidden;
}

#process_count, #process_count_btn {
	font-size: 20px;
}

#metrics {
	float: left;
	border: 1px rgb(232, 228, 228) solid;
	border-radius: 10px;
	background-color: rgb(232, 228, 228);;
	padding: 15px;

	width: 650px;
	max-width: 1220px;
	height: 650px;
	overflow-y: auto;
	scrollbar-width: none; /* Firefox */
}

#runtime {
	float: right;
	border: 1px rgb(232, 228, 228) solid;
	border-radius: 10px;
	background-color: rgb(232, 228, 228);;
	padding: 15px;
	
	width: 1220px;
	max-width: 1220px;
	height: 650px;
	overflow-y: auto;
	scrollbar-width: none; /* Firefox */
}

